syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "fed.cloud.store.api";

package order;

service Order {
    rpc CreateOrder (ShoppingItems) returns (OrderData);
    rpc ConfirmOrder (OrderDraftData) returns (OrderSummary);
    rpc GetOrders (OrdersRequest) returns (OrdersResponse);
    rpc GetOrder (OrderRequest) returns (OrderData);
    rpc UpdateOrderStatus (UpdateOrderStatusRequest) returns (OrderSummary);
    rpc CompleteOrder (OrderRequest) returns (OrderSummary);
}

message OrderRequest{
    string userId = 1;
    string orderId = 2;
}

message OrdersRequest{
    string userId = 1;
}

message ShoppingItems{
    string userId = 1;
    repeated ShoppingItem items = 2;
}

message ShoppingItem {
    int32 id = 1;
    int64 productNumber = 2;
    string productName = 3;
    double unitPrice = 4;
    int32 quanity = 5;
}

message OrderDraftData {
    double total = 1;
    repeated OrderLineData Items = 2;
}

message OrderLineData {
    int64 productNumber = 1;
    string productName = 2;
    double quantity = 3;
    double price = 4;
    string Unit = 5;
}

message OrderData {
    string orderId = 1;
    google.protobuf.Timestamp createdAt = 2;
    string status = 3;
    repeated OrderLineData items = 4;
}

message OrderSummary {
    string orderId = 1;
    int32 totalItems = 2;
    double totalAmount = 3;
    string status = 4;
    google.protobuf.Timestamp createdAt = 5;
}

message OrdersResponse {
    repeated OrderSummary orders = 1;
}

message UpdateOrderStatusRequest {
    string orderId = 1;
    int32 orderStatus = 2;
}