syntax = "proto3";

option csharp_namespace = "fed.cloud.store.api.Protos";

package stock;

service Stock {
	rpc GetStock (StockRequest) returns (StockData);
	rpc GetStockItems (StockItemsRequest) returns (StockItemsData);
	rpc UpdateStockItemQuantity(UpdateStockItemQuantityRequest) returns (StockItemsSummary);
	rpc AddStockItem (AddNewStockItemRequest) returns (StockItemsSummary);
	rpc RemoveStockItem (RemoveStockItemRequest) returns (StockItemsSummary);
}

message StockRequest {
	string userId = 1;
}

message StockItemsRequest {
	int32 stockId = 1;
}

message UpdateStockItemQuantityRequest {
	int64 number = 1;
	double scaleToQuantity = 2;
}

message AddNewStockItemRequest {
	string name = 1;
	double quantity = 2;
	int32 category = 3;
	int32 unit = 4;
	int32 stockId = 5;
}

message RemoveStockItemRequest {
	int64 number = 1;
}

message StockData {
	int32 stockId = 1;
	string name = 2;
	bool main = 3;
}

message StockItemsData {
	int64 number = 1;
	string name = 2;
	double quantity = 3;
	string category = 4;
	int32 unitId = 5;
	string unit = 6;
}

message StockItemsSummary {
	int32 total = 1;
	int32 stockId = 2;
}